FullQa New/src/objects/Rollup__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_Field_Alias__c</fullName>
        <label>Aggregate Field Alias</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Object_API_Name__c</fullName>
        <label>Child Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Field_API_Name__c</fullName>
        <inlineHelpText>e.g No_Closed_Won_Opps__c on Connector</inlineHelpText>
        <label>Destination Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Id_Field__c</fullName>
        <description>This is a relationship field. e.g Connector__c on Opportunity</description>
        <inlineHelpText>This is a relationship field. e.g Connector__c on Opportunity</inlineHelpText>
        <label>Relationship Id Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Relationship_Id_Field__c</columns>
        <columns>Destination_Field_API_Name__c</columns>
        <columns>Aggregate_Field_Alias__c</columns>
        <columns>Batch_Size__c</columns>
        <columns>Active__c</columns>
        <columns>Child_Object_API_Name__c</columns>
        <columns>Has_Limit__c</columns>
        <columns>Limit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rollup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>